Slightly optimized how we store the recently placed containers of players.
* We use an ArrayDeque now to store the recently placed container blocks.
* Instead of building a String, we use BlockLocation now to represent the recently placed container locations. Queries reuse a shared MutableBlockLocation instance.